// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput: type Number renders disabled 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 hdhjuc"
      disabled={true}
    >
      <label
        className="Label-sc-1rdea5p-0 broZvL"
      >
        medium
      </label>
      <input
        className="Input-qkdgvx-0 bBAnfu"
        disabled={true}
        placeholder=" "
        type="number"
        value="123"
      />
      <p
        className="HintText-sc-1e9hzxr-0 cRPHIa"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 hdhjuc"
      disabled={true}
    >
      <label
        className="Label-sc-1rdea5p-0 broZvL"
      >
        large
      </label>
      <input
        className="Input-qkdgvx-0 iEqZbZ"
        disabled={true}
        placeholder=" "
        type="number"
        value="123"
      />
      <p
        className="HintText-sc-1e9hzxr-0 cRPHIa"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 hdhjuc"
      disabled={true}
    >
      <div
        className="Inner-sc-1soq84i-0 gXtJlV"
      >
        <input
          className="Input-qkdgvx-0 feFizH"
          disabled={true}
          placeholder=" "
          type="number"
          value="123"
        />
        <label
          className="LabelInner-vrrjt0-0 iEBjb"
        >
          xlarge
        </label>
      </div>
      <p
        className="HintText-sc-1e9hzxr-0 cRPHIa"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Number renders error 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 hokOxq"
    >
      <label
        className="Label-sc-1rdea5p-0 broZvL"
      >
        medium
      </label>
      <input
        className="Input-qkdgvx-0 gGORpw"
        placeholder="e.g. 1234"
        type="number"
      />
      <p
        className="HintText-sc-1e9hzxr-0 kjnrjC"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 hokOxq"
    >
      <label
        className="Label-sc-1rdea5p-0 broZvL"
      >
        large
      </label>
      <input
        className="Input-qkdgvx-0 kwZysf"
        placeholder="e.g. 1234"
        type="number"
      />
      <p
        className="HintText-sc-1e9hzxr-0 kjnrjC"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 hokOxq"
    >
      <div
        className="Inner-sc-1soq84i-0 gXtJlV"
      >
        <input
          className="Input-qkdgvx-0 jSkcUx"
          placeholder="e.g. 1234"
          type="number"
        />
        <label
          className="LabelInner-vrrjt0-0 iEBjb"
        >
          xlarge
        </label>
      </div>
      <p
        className="HintText-sc-1e9hzxr-0 kjnrjC"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Number renders readOnly 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 hokOxq"
    >
      <label
        className="Label-sc-1rdea5p-0 broZvL"
      >
        medium
      </label>
      <input
        className="Input-qkdgvx-0 bBAnfu"
        placeholder=" "
        readOnly={true}
        type="number"
        value="1234"
      />
      <p
        className="HintText-sc-1e9hzxr-0 cRPHIa"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 hokOxq"
    >
      <label
        className="Label-sc-1rdea5p-0 broZvL"
      >
        large
      </label>
      <input
        className="Input-qkdgvx-0 iEqZbZ"
        placeholder=" "
        readOnly={true}
        type="number"
        value="1234"
      />
      <p
        className="HintText-sc-1e9hzxr-0 cRPHIa"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 hokOxq"
    >
      <div
        className="Inner-sc-1soq84i-0 gXtJlV"
      >
        <input
          className="Input-qkdgvx-0 feFizH"
          placeholder=" "
          readOnly={true}
          type="number"
          value="1234"
        />
        <label
          className="LabelInner-vrrjt0-0 iEBjb"
        >
          xlarge
        </label>
      </div>
      <p
        className="HintText-sc-1e9hzxr-0 cRPHIa"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Number renders with hint 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 hokOxq"
    >
      <label
        className="Label-sc-1rdea5p-0 broZvL"
      >
        medium
      </label>
      <input
        className="Input-qkdgvx-0 bBAnfu"
        placeholder="e.g. 1234"
        type="number"
      />
      <p
        className="HintText-sc-1e9hzxr-0 cRPHIa"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 hokOxq"
    >
      <label
        className="Label-sc-1rdea5p-0 broZvL"
      >
        large
      </label>
      <input
        className="Input-qkdgvx-0 iEqZbZ"
        placeholder="e.g. 1234"
        type="number"
      />
      <p
        className="HintText-sc-1e9hzxr-0 cRPHIa"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 hokOxq"
    >
      <div
        className="Inner-sc-1soq84i-0 gXtJlV"
      >
        <input
          className="Input-qkdgvx-0 feFizH"
          placeholder="e.g. 1234"
          type="number"
        />
        <label
          className="LabelInner-vrrjt0-0 iEBjb"
        >
          xlarge
        </label>
      </div>
      <p
        className="HintText-sc-1e9hzxr-0 cRPHIa"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Number renders with label 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 hokOxq"
    >
      <label
        className="Label-sc-1rdea5p-0 broZvL"
      >
        medium
      </label>
      <input
        className="Input-qkdgvx-0 bBAnfu"
        placeholder="e.g. 1234"
        type="number"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 hokOxq"
    >
      <label
        className="Label-sc-1rdea5p-0 broZvL"
      >
        large
      </label>
      <input
        className="Input-qkdgvx-0 iEqZbZ"
        placeholder="e.g. 1234"
        type="number"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 hokOxq"
    >
      <div
        className="Inner-sc-1soq84i-0 gXtJlV"
      >
        <input
          className="Input-qkdgvx-0 feFizH"
          placeholder="e.g. 1234"
          type="number"
        />
        <label
          className="LabelInner-vrrjt0-0 iEBjb"
        >
          xlarge
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Number renders with label RTL 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 hokOxq"
    >
      <label
        className="Label-sc-1rdea5p-0 broZvL"
        dir="rtl"
      >
        medium
      </label>
      <input
        className="Input-qkdgvx-0 bBAnfu"
        dir="rtl"
        placeholder="e.g. 1234"
        type="number"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 hokOxq"
    >
      <label
        className="Label-sc-1rdea5p-0 broZvL"
        dir="rtl"
      >
        large
      </label>
      <input
        className="Input-qkdgvx-0 iEqZbZ"
        dir="rtl"
        placeholder="e.g. 1234"
        type="number"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 hokOxq"
    >
      <div
        className="Inner-sc-1soq84i-0 gXtJlV"
      >
        <input
          className="Input-qkdgvx-0 feFizH"
          dir="rtl"
          placeholder="e.g. 1234"
          type="number"
        />
        <label
          className="LabelInner-vrrjt0-0 crzJMw"
        >
          xlarge
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Number renders without label 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 hokOxq"
    >
      <input
        className="Input-qkdgvx-0 bBAnfu"
        placeholder="medium e.g. 1234"
        type="number"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 hokOxq"
    >
      <input
        className="Input-qkdgvx-0 iEqZbZ"
        placeholder="large e.g. 1234"
        type="number"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 hokOxq"
    >
      <div
        className="Inner-sc-1soq84i-0 gXtJlV"
      >
        <input
          className="Input-qkdgvx-0 hoDFMK"
          placeholder="xlarge e.g. 1234"
          type="number"
        />
        <label
          className="LabelInner-vrrjt0-0 iEBjb"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Number supports background colour 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 hokOxq"
    >
      <label
        className="Label-sc-1rdea5p-0 broZvL"
      >
        medium
      </label>
      <input
        className="Input-qkdgvx-0 djQcRF"
        placeholder="e.g. 1234"
        type="number"
      />
      <p
        className="HintText-sc-1e9hzxr-0 cRPHIa"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 hokOxq"
    >
      <label
        className="Label-sc-1rdea5p-0 broZvL"
      >
        large
      </label>
      <input
        className="Input-qkdgvx-0 hQAoJi"
        placeholder="e.g. 1234"
        type="number"
      />
      <p
        className="HintText-sc-1e9hzxr-0 cRPHIa"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 hokOxq"
    >
      <div
        className="Inner-sc-1soq84i-0 fqEbYq"
      >
        <input
          className="Input-qkdgvx-0 feFizH"
          placeholder="e.g. 1234"
          type="number"
        />
        <label
          className="LabelInner-vrrjt0-0 iEBjb"
        >
          xlarge
        </label>
      </div>
      <p
        className="HintText-sc-1e9hzxr-0 cRPHIa"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;
